[gd_scene load_steps=5 format=2]

[ext_resource path="res://spike.gd" type="Script" id=1]
[ext_resource path="res://external/aseprite/spikes_01.png" type="Texture" id=2]
[ext_resource path="res://observable.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "stab"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("spike:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 140, 0 ), Vector2( 140, 0 ), Vector2( 0, 0 ) ]
}

[node name="spike_trap" type="Node2D"]
script = ExtResource( 1 )

[node name="spike" type="Area2D" parent="."]
z_index = -10
z_as_relative = false
collision_layer = 0

[node name="sprite" type="Sprite" parent="spike"]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="collision_polygon_2d" type="CollisionPolygon2D" parent="spike"]
polygon = PoolVector2Array( 12, -32, 16, 16, 80, -8 )

[node name="ding" type="AudioStreamPlayer2D" parent="."]

[node name="observable" type="Node2D" parent="."]
script = ExtResource( 3 )
trigger_distance = 100

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/stab = SubResource( 1 )

[node name="stab_interval" type="Timer" parent="."]

[connection signal="body_entered" from="spike" to="." method="_on_spike_body_entered"]
[connection signal="timeout" from="stab_interval" to="." method="_on_stab_interval_timeout"]
